--- a/src/OSK.MessageBus.Local/OSK.MessageBus.Local.csproj
+++ b/src/OSK.MessageBus.Local/OSK.MessageBus.Local.csproj
@@ -10,6 +10,10 @@
 		<PackageTags>OpenSourceKingdom, OpenSource, implementation, local, localhost, Communication, Message, Bus, Architecture, Async, Event, Consistency, Network, Api</PackageTags>
 		<Authors>BlankDev117</Authors>
 		<Title>OSK.MessageBus.Local</Title>
+
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>CS1591</NoWarn>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -17,10 +21,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
-	  <PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
-	  <PackageReference Include="OSK.MessageBus" Version="0.0.1" />
-	  <PackageReference Include="OSK.MessageBus.Application" Version="0.0.1" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
+		<PackageReference Include="OSK.MessageBus.Application" Version="0.2.0" />
+		<PackageReference Include="OSK.MessageBus" Version="0.2.0" />
 	</ItemGroup>
 
 </Project>
